# Overlay-video-use

./: .env.example  .gitignore  STATUS.md  dev_server.py  package.json  pyproject.toml  test_ffmpeg_upload.py
backend/: alembic.ini  auth.py  config.py  database.py  main.py  migrations.py  models.py  requirements.txt  schemas.py  test_upload.py
backend/alembic/: env.py
backend/alembic/versions/: 6e82427f5a0b_initial.py
backend/data/: videouse.db
backend/routers/: audio.py  auth.py  editing.py  exports.py  projects.py  reframe.py  rendering.py  scenes.py  templates.py  transcription.py  uploads.py
backend/services/: audio_service.py  cleanup_service.py  export_service.py  reframe_service.py  render_service.py  scene_service.py  template_service.py  transcribe_service.py  upload_service.py
backend/tests/: conftest.py  test_e2e.py
docs/superpowers/plans/: 2026-05-08-video-use-web-ui.md
frontend/: human_test.js  next.config.js  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/.next/: app-build-manifest.json  trace
frontend/.next/server/: app-paths-manifest.json  server-reference-manifest.json  webpack-runtime.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/app/projects/: page.tsx
frontend/app/register/: page.tsx
frontend/hooks/: use-project.ts  use-transcript.ts
frontend/lib/: api-client.ts  types.ts  utils.ts
frontend/tests/: e2e-real-videos.spec.ts  e2e-user-flow.spec.ts  e2e.spec.ts
helpers/: agent.py  audio.py  grade.py  reframe.py  render.py  scene.py
(+62 files in other folders)
